// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/Transcript/TranscriptRow should correctly render with time 1`] = `
<div
  className="be-transcript-row be-transcript-editing-row"
>
  <div
    className="be-transcript-time"
  >
    123
  </div>
  <div
    className="be-transcript-text"
  >
    <TextareaAutosize
      inputRef={[Function]}
      maxRows={10}
      onChange={[Function]}
      onHeightChange={[Function]}
      useCacheForDOMMeasurements={false}
      value=""
    />
    <div
      className="be-transcript-buttons"
    >
      <Button
        className=""
        data-resin-target="skill-transcripteditcancel"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="be.cancel"
        />
      </Button>
      <PrimaryButton
        data-resin-target="skill-transcripteditsave"
        type="button"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="be.save"
        />
      </PrimaryButton>
    </div>
  </div>
</div>
`;

exports[`elements/content-sidebar/Skills/Transcript/TranscriptRow should correctly render without time 1`] = `
<div
  className="be-transcript-row be-transcript-editing-row"
>
  <div
    className="be-transcript-text"
  >
    <TextareaAutosize
      inputRef={[Function]}
      maxRows={10}
      onChange={[Function]}
      onHeightChange={[Function]}
      useCacheForDOMMeasurements={false}
      value=""
    />
    <div
      className="be-transcript-buttons"
    >
      <Button
        className=""
        data-resin-target="skill-transcripteditcancel"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="be.cancel"
        />
      </Button>
      <PrimaryButton
        data-resin-target="skill-transcripteditsave"
        type="button"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="be.save"
        />
      </PrimaryButton>
    </div>
  </div>
</div>
`;
